# cplusplusbaremetal

./: .gitignore  LICENSE  README.md  env-mac.yml
cmake_template_project/: CMakeLists.txt  cmake.text
cmake_template_project/apps/: CMakeLists.txt  main.cpp
cmake_template_project/include/: fizzbuzz.hpp
cmake_template_project/src/: CMakeLists.txt  fizzbuzz.cpp
cmake_template_project/test/: CMakeLists.txt  testFizzBuzz.cpp
command_line_arguments/: CMakeLists.txt  command_line_arguments.text
command_line_arguments/apps/: CMakeLists.txt  main.cpp
command_line_arguments/lib/pkgconfig/: tclap.pc
fileslib/: CMakeLists.txt  fileslib.text
fileslib/apps/: CMakeLists.txt  main.cpp
fileslib/fileslib/: CMakeLists.txt  files.cpp
fileslib/include/: files.hpp
fileslib/test/: CMakeLists.txt  testLineCount.cpp  testWordCount.cpp
fizzbuzz/: main.cpp
gcc/: gcc.text
generic_tree/: .cpp_aliases  CMakeLists.txt  generic_trees.txt
generic_tree/apps/: CMakeLists.txt  main.cpp
generic_tree/include/: Tree.hpp  Tree.ipp
generic_tree/src/: CMakeLists.txt
generic_tree/test/: CMakeLists.txt  testTree.cpp
hello_world/: hello_world.text  main.cpp
mouse/: CMakeLists.txt  DefaultPilot.cpp  DefaultPilot.hpp  Map.cpp  Map.hpp  Mouse.cpp  Mouse.hpp  Pilot.hpp  Simulation.cpp  Simulation.hpp  main.cpp
passbyvalue/: passbyvalue.text
read_file/: CMakeLists.txt  main.cpp  main2.cpp  read_file.text  testfile
smart_pointers/: CMakeLists.txt  process.sh  smart_pointer.text
smart_pointers/apps/: CMakeLists.txt  raw_pointer_bad_use.cpp  shared_ptr.cpp  unique_ptr.cpp
